# lab2Sim

./: .gitignore  CMakeLists.txt  README.md  analysis.cpp  result.txt  run.bash  run.mac
include/: construction.h  generator.h  physics.h
src/: construction.cpp  generator.cpp  physics.cpp  run.cpp  stepping.cpp
